--- a/apps/web/src/components/SettingsDrawer.module.css
+++ b/apps/web/src/components/SettingsDrawer.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: var(--header-h);
   right: 0;
-  bottom: 0;
+  height: calc(100dvh - var(--header-h));
   z-index: 40;
   width: 320px;
   background: var(--surface-1);
